# OpenEye

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  mcp.example.json
config/: watchlist.yaml
dashboard/: README.md  app.py  comps.py  db.py  defects.py  normalize.py  pipeline.py  pyproject.toml  scoring.py
dashboard/static/: app.js  index.html
mcp/ebay-sold-comps/: README.md  pyproject.toml  scraper.py  server.py
patches/: README.md  fb-mcp-openeye.patch
scripts/: _load-env.ps1  register-task.ps1  scan.ps1  start-fb-mcp.ps1
